# MoneyScope

./: .env_template  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
data/: operations.xlsx
src/moneyscope/: logger_config.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
