[tool.poetry]
name = "moneyscope"
version = "0.1.0"
description = "Приложение для анализа транзакций (курсовая работа)"
authors = ["Дмитрий Кукуйский <kukuiski@gmail.com>"]
readme = "README.md"
packages = [{include = "moneyscope", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = ">=1.0.1"
pandas = ">=2.2.3"
openpyxl = ">=3.1.5"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
isort = ">=5.13.2"
flake8 = ">=7.1.1"
mypy = "^1.12.0"
pandas-stubs = "^2.2.3.241009"
types-requests = "^2.32.0.20241016"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '/(\.git|\.hg|\.mypy_cache|\.tox|\.venv|__pycache__|build|dist|dev_tools)/'

[tool.isort]
# Совместимость с Black, чтобы они не конфликтовали
profile = "black"
line_length = 119
